# LED-Controller

./: .gitignore  CMakeLists.txt  Color.h  README.md  SerialUtil.cpp  SerialUtil.h  main.cpp  settings.conf
src/: Color.cpp  Config.cpp  Config.h  LEDController.cpp  LEDController.h  Serial.cpp  Serial.h  SerialUtil.cpp  SerialUtil.h  main.cpp
src/server/: PacketType.h  Server.cpp  Server.h
